--- a/css/styles.css
+++ b/css/styles.css
@@ -107,6 +107,15 @@ body {
     padding: 7% 15%;
   }
   
+
+  .features {
+    background-color: #FDEFF4;
+  }
+
+
+  .titles {
+    background-color: #FFC0D3;
+  }
   
   .press {
     text-align: center;
@@ -141,7 +150,39 @@ body {
     text-align: center;
   }
 
+}
 
+
+@media (max-width: 800px) {
+  .cta h4 {
+    font-size: 7vw;
+  }
+
+  .titles h1 {
+    font-size: 7vw;
+  }
+
+  #features i {
+
+   size: 5vw;
+
+  }
+
+  .testimonials h2 {
+    font-size: 7vw;
+  }
+
+  .testimonials p {
+    font-size: 4vw;
+  }
+
+  .features h3 {
+    font-size: 6vw;
+  }
+
+ 
+  
+  
 }
 
   /* Footer Section */
